# flask-boilerplate

./: .editorconfig  .gitignore  Dockerfile  README-pt-br.md  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: unit_test.yml
app/: __init__.py  hello_world.py  models.py  serializer.py
app/templates/: index.html
tests/: conftest.py  test_hello_world.py
