[project]
name = "flask-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.13.1",
    "blinker==1.7.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "flask==3.0.2",
    "flask-marshmallow==1.2.0",
    "flask-migrate==4.0.5",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.1.1",
    "gunicorn==21.2.0",
    "iniconfig==2.0.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.3",
    "mako==1.3.2",
    "markupsafe==2.1.5",
    "marshmallow==3.20.2",
    "marshmallow-sqlalchemy==1.0.0",
    "mccabe==0.7.0",
    "packaging==23.2",
    "pluggy==1.4.0",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.27",
    "typing-extensions==4.9.0",
    "werkzeug==3.0.1",
]

[dependency-groups]
dev = [
    "coverage==7.4.3",
    "flake8==7.0.0",
    "pycodestyle==2.11.1",
    "pyflakes==3.2.0",
    "pytest==8.0.0",
]
